# deepfont-torch

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml  ty.yml
configs/: eval.yaml  finetune.yaml  pretrain.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  gradient_norm.yaml  lr_monitor.yaml  model_checkpoint.yaml  model_summary.yaml  pretrain.yaml  reconstruction_visualizer.yaml
configs/data/: eval.yaml  finetune.yaml  pretrain.yaml
configs/experiment/: finetune_smoke_test.yaml  pretrain_smoke_test.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/model/: deepfont.yaml  deepfont_ae.yaml
configs/trainer/: finetune.yaml  pretrain.yaml
data/: README.md
deepfont/callbacks/: __init__.py  config_store.py  early_stopping.py  gradient_norm.py  lr_monitor.py  model_checkpoint.py  model_summary.py  reconstruction_visualizer.py
deepfont/data/: __init__.py  augmentations.py  config.py  datasets.py
deepfont/data/bcf/: __init__.py  bcf_store_file.py  read_label.py
deepfont/models/: __init__.py  config.py  deepfont.py
deepfont/trainer/: __init__.py  base.py  config.py  finetune.py  pretrain.py
notebooks/: data_augmentations_visualized.ipynb  model_architectures_visualized.ipynb
scripts/: benchmark_workers.py  create_manifest.py  eval.py  finetune.py  pretrain.py
tests/: smoke_test.py  test_augmentations.py  test_callbacks.py  test_data_config.py  test_dataset_cache.py  test_finetune_trainer.py  test_model.py  test_model_config.py  test_persistent_pipelines.py  test_pretrain_trainer.py  test_trainer_base.py  test_trainer_config.py
